[package]
name = "stegano-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17.7"
anyhow = "1.0.66"
ulid = "1.0.0"
clap = { version="4.0.32", features=["derive"] }
slog-term = "2.9.0"
slog = "2.7.0"
